Add findResourceByMetadata endpoint
